[gd_scene load_steps=18 format=2]

[ext_resource path="res://Fonts/slkscrb.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/LANServerBroadcast/server_listener/ServerListener.gd" type="Script" id=2]
[ext_resource path="res://Fonts/slkscre.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/LobbyFinder.gd" type="Script" id=4]
[ext_resource path="res://Sprites/hat.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4.48987, 330 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dots:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("dots:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.68188, 398.176 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Label2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LobbyName:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("connected:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Label5:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Name:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Gamemode:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("hat:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "server found"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dots:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("connected:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LobbyName:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Label5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Gamemode:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Name:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("hat:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dots:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "...", ".", ".." ]
}

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 70, 60 )

[sub_resource type="DynamicFont" id=7]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 41
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 1 )

[node name="root" type="Node2D"]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "reset"
anims/reset = SubResource( 1 )
"anims/server found" = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.68176
margin_top = -2.56314
margin_right = 546.318
margin_bottom = 969.437
color = Color( 0.141176, 0.141176, 0.141176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dotsanim" type="AnimationPlayer" parent="."]
autoplay = "dotshops"
anims/dotshops = SubResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -4.48987
margin_top = 330.0
margin_right = 539.51
margin_bottom = 435.0
custom_fonts/font = SubResource( 4 )
text = "Finding 
Lobby"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dots" type="Label" parent="."]
visible = false
anchor_left = 0.0174791
anchor_top = 0.00786565
anchor_right = 0.0174791
anchor_bottom = 0.00786565
margin_left = 5.68188
margin_top = 398.176
margin_right = 547.682
margin_bottom = 499.176
custom_fonts/font = SubResource( 5 )
text = "..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TouchScreenButton" parent="."]
position = Vector2( 190.624, 795.289 )
shape = SubResource( 6 )
shape_visible = false

[node name="Label2" type="Label" parent="."]
anchor_left = -0.429
anchor_top = 0.106
anchor_right = -0.429
anchor_bottom = 0.106
margin_left = -5.89346
margin_top = 861.155
margin_right = 537.107
margin_bottom = 932.155
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.501961, 0.52549, 1 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reciever" type="Node" parent="."]
script = ExtResource( 2 )

[node name="LobbyName" type="Label" parent="."]
margin_left = 2.0
margin_top = 5.0
margin_right = 538.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 8 )
text = "Lobby Name"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connected" type="Label" parent="."]
margin_left = 2.0
margin_top = 592.0
margin_right = 541.0
margin_bottom = 633.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.647059, 0.937255, 0.67451, 1 )
text = "Connected"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
visible = false
margin_left = 0.887817
margin_top = 772.224
margin_right = 542.888
margin_bottom = 813.224
custom_fonts/font = SubResource( 10 )
text = "Waiting For Game To Begin"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 2.87585
margin_top = 531.27
margin_right = 544.876
margin_bottom = 607.27
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.94902, 0.988235, 0.505882, 1 )
text = "Name Goes Here"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gamemode" type="Label" parent="."]
margin_left = 1.0
margin_top = 71.0
margin_right = 541.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 12 )
text = "Gamemode Goes Here"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hat" type="Sprite" parent="."]
position = Vector2( 270.956, 431.466 )
scale = Vector2( 0.40546, 0.40546 )
texture = ExtResource( 5 )
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="new_server" from="reciever" to="." method="_on_reciever_new_server"]
[connection signal="remove_server" from="reciever" to="." method="_on_reciever_remove_server"]
